# jelly_locomotion

./: CMakeLists.txt  README.md  package.xml  setup.py  urdf.rviz
laikago/: laikago.urdf
launch/: dog.launch
scripts/: balance.py  dog.py  dog_demo.py  gait.py  leg_kin.py  robotics_math.py
scripts/data/jelly/: jelly.urdf
src/jelly_locomotion/: jelly_gaits.py  leg_kin.py  robotics_math.py
